#40 updated operation-core