@@ -13,7 +13,7 @@
 
     <groupId>ru.sergkorot.dynamic</groupId>
     <artifactId>spring-boot-operation-starter</artifactId>
-    <version>3.2.0</version>
+    <version>3.2.1</version>
 
     <name>Dynamic search</name>
     <description>Library for dynamic searching into the databases</description>
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>ru.sergkorot.dynamic</groupId>
             <artifactId>operation-core</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.yaml</groupId>
@@ -81,6 +81,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -98,7 +103,6 @@
                     </annotationProcessorPaths>
                     <source>17</source>
                     <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
